@@ -19,6 +19,9 @@ Version 1.11.15+dev:
    * Disabled the tod schedule and playlist menues in pure map mode.
    * Support for displaying the saved status of the selected area.
    * Fixed error messages about missing UI elements.
+ * Graphics:
+   * [item] images are now subject to local ToD lighting effects instead of
+     just the current map-wide ToD lighting (bug #22215).
  * Language and i18n:
    * Updated translations: German, Vietnamese
  * User interface:
